--- a/NewBlazorTodo/NewBlazorTodo/Client/_Imports.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using NewBlazorTodo.Client
 @using NewBlazorTodo.Client.Shared
 @using NewBlazorTodo.Shared.Models
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components
