--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" @onclick="()=>expandSubMenu= !expandSubMenu">
+            <NavLink class="nav-link" href="activeorders" @onclick="()=>expandSubMenu= !expandSubMenu">
                 <span class="oi oi-cart" aria-hidden="true"></span> Orders
             </NavLink>
             @if (expandSubMenu)
