--- a/NewBlazorTodo/NewBlazorTodo/Client/wwwroot/css/app.css
+++ b/NewBlazorTodo/NewBlazorTodo/Client/wwwroot/css/app.css
@@ -217,4 +217,11 @@ app {
     }
 }
 
+.midde-box{
+    margin:auto;
+    margin-top: 150px;
+    width:300px;
+    box-shadow: 5px, 10px, 18px #888888;
+    border-radius:20px;
+}
 
