--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -21,12 +21,12 @@
             <NavLink class="nav-link" href="customerlist">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Företagskunder
             </NavLink>
-        </li>      
+        </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/admin">
                 <span class="oi oi-people" aria-hidden="true"></span> Admins
-            </NavLink>          
+            </NavLink>
         </li>
 
         <li class="nav-item px-3">
@@ -43,7 +43,7 @@
                     </li>
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="activeorders">
-                            <span class="oi oi-globe" aria-hidden="true"></span> Aktiva Orders
+                            <span class="oi oi-globe" aria-hidden="true"></span> Aktiva orders
                         </NavLink>
                     </li>
                     <li class="nav-item px-3">
@@ -55,7 +55,16 @@
 
             }
         </li>
-
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/NekadeOrders">
+                <span class="oi oi-inbox" aria-hidden="true"></span> <h5>Nekade orders</h5>
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/Order/History">
+                <span class="oi oi-file" aria-hidden="true"></span> Order History
+            </NavLink>
+        </li>
     </ul>
     
 </div>
