--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/FetchData.razor
@@ -44,7 +44,7 @@ else
                         <td>@order.orderEnd</td>
                         <td>@order.orderInfo</td>
                         <td>@order.OperatorID</td>
-                      
+                        <a class="btn btn-success" href="/nekadorder/edit/@order.orderId">Ändra Operatör</a>
                     </tr>
                 }
 
