--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
@@ -29,6 +29,7 @@ else
                 <th>Arbetsorder slut</th>
                 <th>Övrig information</th>
                 <th>Operatörs ID</th>
+                <th>Order Status</th>
 
             </tr>
         </thead>
@@ -44,6 +45,7 @@ else
                         <td>@order.orderEnd</td>
                         <td>@order.orderInfo</td>
                         <td>@order.OperatorID</td>
+                        <td>@order.OrderStatus</td>
 
                     </tr>
                 }
