--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/PayMentDetail/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/PayMentDetail/FetchData.razor
@@ -3,7 +3,7 @@
 @inject HttpClient client
 @inject IJSRuntime js
 
-<h3>Order Betalningar</h3>
+<h3>Skicka Fakturor</h3>
 <small>Bästa sidan att besöka. Här får vi betalt!</small>
 
 
