--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/Form.razor
@@ -2,7 +2,16 @@
 @inject NavigationManager uriHelper
 <EditForm Model="@order" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator />
-
+    <div class="form-group">
+        <div class="col-sm-3">
+            <InputSelect id="OperatorTempId" @bind-Value="OperatorTempId" class="form-control">
+                @foreach (var op in operatorsList)
+                {
+                    <option value="@op.Id">@op.FirstName</option>
+                }
+            </InputSelect>
+        </div>
+    </div>
     <div class="form-group">
         <label>Arbetsbeskrivning :</label>
         <div>
@@ -69,7 +78,7 @@
 
     <div class="form-group">
         <div class="col-sm-3">
-            <InputSelect  @bind-Value="order.OrderStatus" class="form-control">
+            <InputSelect @bind-Value="order.OrderStatus" class="form-control">
                 @foreach (var orderStatus in Enum.GetValues(typeof(OrderStatus)))
                 {
                     <option value="@orderStatus">@orderStatus</option>
@@ -83,7 +92,7 @@
 
 
 
-    <button type="submit" class="btn btn-success">
+    <button type="submit" class="btn btn-success" @onclick="@ChangeValue">
         @ButtonText
     </button>
 
@@ -94,9 +103,24 @@
     [Parameter] public string ButtonText { get; set; } = "Spara";
     [Parameter] public EventCallback OnValidSubmit { get; set; }
 
+    public List<Operators> operatorsList { get; set; } = new List<Operators>();
+
     public List<Orders> orderStatusList { get; set; } = new List<Orders>();
     public string OperatorTempId { get; set; }
 
+    protected override async Task OnInitializedAsync()
+    {
+        HttpClient client = new HttpClient();
+        operatorsList = await client.GetFromJsonAsync<List<Operators>>("https://webapitodo20200919020315.azurewebsites.net/api/operators");
+        OperatorTempId = order.OperatorID.ToString();
+
+
+    }
+
+    public void ChangeValue()
+    {        
+        order.OperatorID = (int.Parse(OperatorTempId));       
+    }
 
     public void GoToPage()
     {
