--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -48,7 +48,7 @@
                     </li>
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="ordershistory">
-                            <span class="oi oi-euro" aria-hidden="true"></span> Skicka Faktura
+                            <span class="oi oi-euro" aria-hidden="true"></span> Hantera Fakturor
                         </NavLink>
                     </li>
                 </ul>
