--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
@@ -36,7 +36,7 @@ else
         <tbody>
             @foreach (Orders order in nekadeOrders)
             {
-                if (order.OrderStatus == OrderStatus.BETALD)
+                if (order.OrderStatus == OrderStatus.FAKTURA_SKICKAD)
                 {
                     <tr>
                         <td>@order.orderId</td>
