--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Form.razor
@@ -1,8 +1,14 @@
 ﻿@inject NavigationManager uriHelper
+
+<style>
+    .dropdownView{
+        width: 210px;
+    }
+</style>
 <EditForm Model="@order" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator />
-    <div class="form-group">
-        <div class="col-sm-3">
+    <div class="dropdownView">
+        <div>
             <InputSelect id="OperatorTempId" @bind-Value="OperatorTempId" class="form-control">
                 @foreach (var op in operatorsList)
                 {
@@ -19,7 +25,7 @@
         </div>
     </div>
 
-    <div class="form-group ">
+    <div class="form-group">
         <div>
             <label>Startdatum för arbetsorder :</label>
             <div>
@@ -40,7 +46,7 @@
     </div>
 
     <div class="form-group">
-        <div class="col-sm-3">
+        <div class="dropdownView">
             <InputSelect id="customers" @bind-Value="CustomerTempId" class="form-control">
                 @foreach (var op in customersList)
                 {
