--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/StartPage/Login.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/StartPage/Login.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/start"
 @inject HttpClient client
 @inject NavigationManager uriHelper
 
@@ -45,8 +45,8 @@
 
                 <!-- Header -->
                 <header class="w3-container w3-center w3-padding-32">
-                    <h1><b>M A A D  TechController</b></h1>
-                    <p> <span class="w3-tag">- Välkommen till oss på MAAD TechController -</span></p>
+                    <h1><b>M A A D  Control Center</b></h1>
+                    <p> <span class="w3-tag">- Välkommen till oss på MAAD -</span></p>
                 </header>
 
                 <!-- Grid -->
