--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="/" class="ml-md-auto">Home</a>
+        <a href="/start" class="ml-md-auto">Hem</a>
     </div>
 
     <div class="content px-4 container">
