--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/Form.razor
@@ -61,6 +61,18 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <div class="dropdownView">
+            <label>Välj Bransch</label>
+            <InputSelect @bind-Value="order.WorkProfessions" class="form-control">
+                @foreach (var WorkProfessions in Enum.GetValues(typeof(WorkProfessions)))
+                {
+                    <option value="@WorkProfessions">@WorkProfessions</option>
+                }
+            </InputSelect>
+        </div>
+    </div>
+
     <button type="submit" class="btn btn-success">
         @ButtonText
     </button>
@@ -70,6 +82,7 @@
 
 @code {
     [Parameter] public Operators o { get; set; }
+    [Parameter] public Orders order { get; set; }
     [Parameter] public string ButtonText { get; set; } = "Spara";
     [Parameter] public EventCallback OnValidSubmit { get; set; }
 
