--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Form.razor
@@ -7,16 +7,29 @@
 </style>
 <EditForm Model="@order" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator />
-    <div class="dropdownView">
-        <div>
-            <InputSelect id="OperatorTempId" @bind-Value="OperatorTempId" class="form-control">
-                @foreach (var op in operatorsList)
+    @*<div class="dropdownView">
+            <div>
+                <InputSelect id="OperatorTempId" @bind-Value="OperatorTempId" class="form-control">
+                    @foreach (var op in operatorsList)
+                    {
+                        <option value="@op.Id">@op.FirstName</option>
+                    }
+                </InputSelect>
+            </div>
+        </div>*@
+
+    <div class="form-group">
+        <div class="dropdownView">
+            <label>Välj Bransch</label>
+            <InputSelect @bind-Value="order.WorkProfessions" class="form-control">
+                @foreach (var WorkProfessions in Enum.GetValues(typeof(WorkProfessions)))
                 {
-                    <option value="@op.Id">@op.FirstName</option>
+                    <option value="@WorkProfessions">@WorkProfessions</option>
                 }
             </InputSelect>
         </div>
     </div>
+
     <div class="form-group">
         <label>Arbetsbeskrivning :</label>
         <div>
@@ -55,14 +68,14 @@
             </InputSelect>
         </div>
     </div>
-    
-        <button type="submit" class="btn btn-success" @onclick="@ChangeValue">
 
-            @ButtonText
-        </button>
-    
+    <button type="submit" class="btn btn-success" @onclick="@ChangeValue">
 
-    
+        @ButtonText
+    </button>
+
+
+
 
 </EditForm>
 
@@ -74,12 +87,17 @@
     public List<Customers> customersList { get; set; } = new List<Customers>();
     public string CustomerTempId { get; set; } // Temp ID for customer.ID
 
+    public List<Orders> orderIDList { get; set; } = new List<Orders>();
+
+
+
 
     protected override async Task OnInitializedAsync()
     {
         HttpClient client = new HttpClient();
         operatorsList = await client.GetFromJsonAsync<List<Operators>>("https://webapitodo20200919020315.azurewebsites.net/api/operators");
         customersList = await client.GetFromJsonAsync<List<Customers>>("https://webapitodo20200919020315.azurewebsites.net/api/customers");
+        orderIDList = await client.GetFromJsonAsync<List<Orders>>("https://webapitodo20200919020315.azurewebsites.net/api/orders");
 
         //Using InputSelect cant handle INT so you have to change to a STRING
         OperatorTempId = order.OperatorID.ToString(); //Change OperatorID to a string
@@ -88,8 +106,10 @@
     }
 
     [Parameter] public Orders order { get; set; }
+    [Parameter] public Operators _operator { get; set; }
     [Parameter] public string ButtonText { get; set; } = "Spara";
     [Parameter] public EventCallback OnValidSubmit { get; set; }
+    int randomID { get; set; }
 
     public void GetBackOnePage()
     {
@@ -99,7 +119,18 @@
     // Rechange value of order.OperatorID / customerId back to int
     public void ChangeValue()
     {
+        List<int> tempList = new List<int>();
 
+        foreach (var item in orderIDList)
+        {
+            if(order.WorkProfessions == _operator.WorkProfessions)
+                tempList.Add(item.orderId);
+        }
+        var random = new Random();
+        randomID = random.Next(tempList.Count);
+
+
+        order.orderId = randomID;
         order.OperatorID = (int.Parse(OperatorTempId)); //Change back from string to int
         order.customerId = (int.Parse(CustomerTempId)); //Change back from string to int
     }
